fix: corregir soporte de CORS con comodin y variables de entorno